2017-02-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* README.md: Use canonical URLs

	* inst/NEWS.Rd: Updated to use \CRANpkgP{}

	* cleanup: Call GNUmakefile in examples directories too

2017-02-08  Łukasz Łaniewski-Wołłk  <llaniewski@gmail.com>

	* src/RInside.cpp (initialize): In interactive mode, allow use of
	readline

	* inst/examples/standard/rinside_interactive0.cpp: New example of
	a planetary motion solver with console for parameter override

2017-02-08  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>

	* inst/include/RInside.h (R): Move repl() declaration outside #ifdef

	* src/RInside.cpp (repl): Ditto for definition

2016-02-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/wt/GNUmakefile: Add -lboost_system

2016-02-07  Mattias Ellert <mattias.ellert@fysast.uu.se>

	* src/Makevars: Also use LDFLAGS

	* src/tools/RInsideEnvVars.r: Exclude three more variables containing
	the build path

2015-05-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.13

2015-05-16  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (install): Use ppa for r-cran-rcpp in .travis.yml

2015-05-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RInsideCommon.h: Do not include RInterface.h here as
	the file gets included from several source files

	* src/RInside.cpp: But rather include RInterface.h here just once

2015-01-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.12

2015-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Description): Updated Description: to note that we now
	have eight examples subdirectories, and that (all but one of) these
	example directories use Makefiles with GNU make extensions, which
	have therefore been renamed to GNUmakefile to please R CMD check
	* DESCRIPTIION (Version): Bumped Version: and Date:

	* inst/examples/armadillo/GNUmakefile: Renamed from Makefile
	* inst/examples/eigen/GNUmakefile: Ditto