@@ -2,7 +2,8 @@
 #
 # This owes a lot to littler.R  in the littler sources
 
-ExcludeVars <- c("R_SESSION_TMPDIR","R_HISTFILE","R_LIBRARY_DIR","R_LIBS","R_PACKAGE_DIR")
+ExcludeVars <- c("R_SESSION_TMPDIR", "R_HISTFILE", "R_LIBRARY_DIR",
+                 "R_LIBS", "R_PACKAGE_DIR")
 IncludeVars <- Sys.getenv()
 IncludeVars <- IncludeVars[grep("^R_",names(IncludeVars),perl=TRUE)]
 if (.Platform$OS.type == "windows") {
